--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ body {
                 </div>
                 <div class="hero-cta-block">
                     <div class="hero-contact-block">
-                        <a href="mailto:info@brunosimon.com" class="hero-contact-link-text">💌 jahidads@yhaoo.com</a>
+                        <a href="mailto:jahidads@yhaoo.com" class="hero-contact-link-text">💌 jahidads@yhaoo.com</a>
                         <a href="tel:+390346385302" class="hero-contact-link-text">📞 +880 13088 39759</a>
                     </div>
                 </div>
@@ -1153,4 +1153,5 @@ body {
 
                                     </script>
                                     </body>
+
                                     </html>
